# utat_payload

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  clean_images  config.h  config.h.in  init_teledyne  options.cfg  teledyne.cfg  teledyne.xml  uavPayload  utxPayload
camera/: CMakeLists.txt  Makefile  araviscamera.cpp  araviscamera.h  arvteledyne.cpp  arvteledyne.h  fakecamera.cpp  fakecamera.h  uavcamera.h  webcamera.cpp  webcamera.h
gps/: CMakeLists.txt  gps_mod.cpp  gps_mod.h  gps_struct.h  gpsmod.cpp  gpsmod.h
image_cropping/: CMakeLists.txt  build_instructions.txt  dbscan.cpp  dbscan.h  dirty_script.py  mesurf.cpp  readme.txt
imgproc/: CMakeLists.txt  Makefile  uavcv.cpp  uavcv.h
main/: CMakeLists.txt  CMakeLists.txt~  imagepacket.h  io_mod.cpp  io_mod.h  io_utils.cpp  io_utils.h  main.cpp  uavPayload  uavimage.h  uavmain.cpp  utxPayload
modules/: FindGpsd.cmake  Findaravis.cmake  Findglib.cmake  Findgphoto2.cmake  Findgstreamer.cmake
vision/: CMakeLists.txt  imgproc.cpp  imgproc.h
